# projet_big_data_cytech_25_Julien_Michaud_Clement_Delamotte

./: .gitignore  docker-compose.yml
ex01_data_retrieval/src/main/scala/: pensebete.txt  retrieve-data.scala
ex02_data_ingestion/src/main/scala/: data_ingestion.scala
ex03_sql_table_creation/: creation.sql
ex04_dashboard/: app.py  pyproject.toml
ex05_ml_prediction_service/: data_preprocessing.py  machine-learning.py  pyproject.toml
