#pyproject.toml
[project]
name = "ex04_dashboard"
version = "1.0.0"
description = "Random Forest Regressor to calculate price for travelling around NYC. Big Data, CY tech, 2025."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask[dataframe]>=2026.1.2",
    "flake8>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.54.0",
]